Implement Automation Rules & Advanced Search with Scoring (Mission 1 & 2)
## Mission 1: Automation Rules & Bulk Status Update
- Add AutomationRule entity with TriggerType (STATUS_CHANGED, DAYS_WITHOUT_ACTION, APPLICATION_RECEIVED) and ActionType (CHANGE_STATUS, SEND_EMAIL, NOTIFY_CANDIDATE)
- AutomationService with rule creation, bulk status updates, scheduled processing (DAYS_WITHOUT_ACTION)
- AutomationController: POST/GET/PUT/DELETE automation rules, bulk status update with report (updated/skipped count)
- BulkStatusModal: select multiple candidates, change status, view report
- CandidateReview: add checkboxes with ListChecks icon, bulk action button, card selection states
- EmployerDashboard: integrate AutomationRulesPanel for rule management
- EmailUtil: new methods for status change, bulk action confirmation, automation triggered notifications

## Mission 2: Advanced Search with Scoring
- JobSearchCriteria & CandidateSearchCriteria records (with pagination defaults: page=0, size=20)
- ScoredJobDTO & ScoredCandidateDTO with ScoreBreakdown (skills 40, experience 20, location 15, availability 15, title 10)
- JpaSpecificationExecutor: JobListingSpecification & CandidateSpecification for dynamic filtering
- ScoringService: calculateMatchScore() with deterministic 0-100 scoring, scoreCandidatesForJob(), scoreJobsForCandidate()
- SearchService: searchJobs() with pagination, searchCandidates(), getSuggestions() (top 5 job titles with autocomplete)
- SearchController: POST /api/search/jobs (public), POST /api/search/candidates (employer-only), GET /api/search/suggestions
- AdvancedSearchPanel: multi-field search form with keywords autocomplete, location, contract type, salary range, experience, skills tags, posting date filter
- ScoreBadge: colored badge (green 80+, yellow 60-79, orange 40-59, red <40) with tooltip breakdown on hover
- SearchApi: wrapper functions for all search endpoints

## Build Status
- Backend: mvn compile ✓, mvn test ✓ (40 passing, 1 pre-existing